ham__menu z-index fix

--- a/pages/main/css/navbar.css
+++ b/pages/main/css/navbar.css
@@ -59,6 +59,7 @@
     left: -203px;
     background-color: white;
     transition: 0.6s all ease-in-out;
+    z-index: 10;
   }
 
   .ham__menu-wrapper {
